Fix missing background color

--- a/docs/generic.css
+++ b/docs/generic.css
@@ -5,7 +5,7 @@ body {
   color: rgb(0,0,0);
   font-family: Verdana, Arial, Helvetica, sans-serif;
   font-size: 80%;
-//  font-size: 83%;
+  background: #ffffff;
 }
 
 p, ul, ol, dl {
